@@ -1,4 +1,4 @@
-FROM maven:3-eclipse-temurin-24 AS builder
+FROM maven:3-eclipse-temurin-25 AS builder
 LABEL maintainer="contact@bittich.be"
 
 WORKDIR /app
@@ -15,7 +15,7 @@ COPY ./event/src ./event/src
 
 RUN mvn package -DskipTests
 
-FROM ibm-semeru-runtimes:open-24-jre-jammy
+FROM ibm-semeru-runtimes:open-25-jre-jammy
 #FROM eclipse-temurin:22-jre-jammy
 LABEL maintainer="contact@bittich.be"
 
@@ -50,6 +50,6 @@ COPY --from=builder /app/artcoded/target/api-backend.jar ./api-backend.jar
 #ENV JAVA_OPTS "--enable-preview -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI"
 
 # add  "--log.file=/tmp/truffle.log" if it's too verbose
-ENTRYPOINT [ "java", "-Xtune:virtualized","-XX:+CompactStrings", "-Xshareclasses:cacheDir=/opt/shareclasses", "-jar","/app/api-backend.jar"]
+ENTRYPOINT [ "java", "-Xtune:virtualized","-XX:+CompactStrings","-XX:+UseCompactObjectHeaders", "-Xshareclasses:cacheDir=/opt/shareclasses", "-jar","/app/api-backend.jar"]
 #ENTRYPOINT [ "sh", "-c","java $JAVA_OPTS  -jar /app/api-backend.jar"]
 
